Fixed major bugs, need to adjust alignment

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,5 @@
 .footer {
   display: flex;
-  position: relative;
   color: #545454;
   left: 200px;
   width: 318px;
